--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
-    "react-progressbar": "^15.4.1",
+    "react-progressbar": "^1.4.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
