--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-progressbar": "^1.4.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "recharts": "^2.1.9",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
